SIP-1483|reducing sonar warinings